test/valid/fc36994_TestOverride/AbstractClass.plume
/**
 * For testing overriding
 * @author 36994, César Santos
 */
 abstract class AbstractClass extends Object is
  abstract method test : (b : Boolean) -> Integer
  method print : () -> String is
    "AbstractClass"