test/invalid/fc36994_TestReturn/WrongReturnTest.plume
/**
 * For testing wrong return type
 * @author 36994, César Santos
 */
class WrongReturnTest extends Object is
  method test : () -> Boolean is
    5